kustomize/bases/immich/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/instance: immich-server
    app.kubernetes.io/version: v1.100.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: immich-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: immich
        app.kubernetes.io/instance: immich-server
        app.kubernetes.io/version: v1.100.0
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v1.100.0
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
          args:
            - ./start-server.sh
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
            - mountPath: /external
              name: external
          livenessProbe:
            httpGet:
              path: /server-info/ping
              port: 3001
          readinessProbe:
            httpGet:
              path: /server-info/ping
              port: 3001
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: storage
        - name: external
          nfs:
            path: /srv/nfs/usb/photos
            readOnly: true
            server: nuc-01.internal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-learning
  labels:
    app.kubernetes.io/name: machine-learning
    app.kubernetes.io/component: machine-learning
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/version: v1.100.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: machine-learning
      app.kubernetes.io/instance: immich-machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: machine-learning
        app.kubernetes.io/component: machine-learning
        app.kubernetes.io/part-of: immich
        app.kubernetes.io/instance: immich-machine-learning
        app.kubernetes.io/version: v1.100.0
    spec:
      containers:
        - name: machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.100.0
          volumeMounts:
            - name: cache
              mountPath: /cache
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
      volumes:
        - name: cache
          emptyDir:
            {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices
  labels:
    app.kubernetes.io/name: microservices
    app.kubernetes.io/component: microservices
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/instance: immich-microservices
    app.kubernetes.io/version: v1.100.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: microservices
      app.kubernetes.io/instance: immich-microservices
  template:
    metadata:
      labels:
        app.kubernetes.io/name: microservices
        app.kubernetes.io/component: microservices
        app.kubernetes.io/part-of: immich
        app.kubernetes.io/instance: immich-microservices
        app.kubernetes.io/version: v1.100.0
    spec:
      containers:
        - name: microservices
          image: ghcr.io/immich-app/immich-server:v1.100.0
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
          args:
            - ./start-microservices.sh
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
            - mountPath: /external
              name: external
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: storage
        # External library shared via nfs
        - name: external
          nfs:
            path: /srv/nfs/usb/photos
            readOnly: true
            server: nuc-01.internal
