kustomize/bases/immich/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/instance: immich-server
    app.kubernetes.io/version: v1.117.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: immich-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: immich
        app.kubernetes.io/instance: immich-server
        app.kubernetes.io/version: v1.117.0
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v1.117.0
          imagePullPolicy: IfNotPresent
          # command:
          #   # - "/bin/sh"
          #   - "./start.sh"
          # args:
          # #   - ./start.sh
          #   - immich
          volumeMounts:
            - name: storage
              mountPath: /usr/src/app/upload
            - mountPath: /external
              name: external
          livenessProbe:
            httpGet:
              path: /server-info/ping
              port: 3001
          readinessProbe:
            httpGet:
              path: /server-info/ping
              port: 3001
      volumes:
        # - name: library
        #   persistentVolumeClaim:
        #     claimName: storage
        - name: external
          nfs:
            path: /mnt/spinner/photos
            readOnly: true
            server: nas.internal
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 512Gi
        storageClassName: longhorn-mirror-retain
