kustomize/bases/immich/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/instance: immich-server
    app.kubernetes.io/version: v1.117.0
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: immich-server
---
apiVersion: v1
kind: Service
metadata:
  name: machine-learning
  labels:
    app.kubernetes.io/name: machine-learning
    app.kubernetes.io/component: machine-learning
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/version: v1.117.0
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app.kubernetes.io/name: machine-learning
    app.kubernetes.io/instance: immich-machine-learning
